// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`common table expressions > as data source 1`] = `
{
  "buckets": [
    {
      "hash": 175706552,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        {
          "alias": "id",
          "expr": {
            "source": {
              "column": "id",
            },
            "type": "data",
          },
        },
        {
          "alias": "name",
          "expr": {
            "source": {
              "column": "name",
            },
            "type": "data",
          },
        },
      ],
      "filters": [],
      "hash": 210323829,
      "outputTableName": "organisations",
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "id",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "organisations",
      },
      "tableValuedFunctions": [],
    },
  ],
  "parameterIndexes": [
    {
      "filters": [],
      "hash": 505749374,
      "lookupScope": {
        "lookupName": "lookup",
        "queryId": "0",
      },
      "output": [
        {
          "source": {
            "column": "org_id",
          },
          "type": "data",
        },
      ],
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "user_id",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "org_memberships",
      },
      "tableValuedFunctions": [],
    },
  ],
  "streams": [
    {
      "queriers": [
        {
          "bucket": 0,
          "lookupStages": [
            [
              {
                "instantiation": [
                  {
                    "expr": {
                      "function": "->>",
                      "parameters": [
                        {
                          "source": {
                            "request": "auth",
                          },
                          "type": "data",
                        },
                        {
                          "type": "lit_string",
                          "value": "$.sub",
                        },
                      ],
                      "type": "function",
                    },
                    "type": "request",
                  },
                ],
                "lookup": 0,
                "type": "parameter",
              },
            ],
          ],
          "requestFilters": [],
          "sourceInstantiation": [
            {
              "lookup": {
                "idInStage": 0,
                "stageId": 0,
              },
              "resultIndex": 0,
              "type": "lookup",
            },
          ],
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": 1,
}
`;

exports[`common table expressions > as parameter query 1`] = `
{
  "buckets": [
    {
      "hash": 377732370,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 39898946,
      "outputTableName": "projects",
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "org_id",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "projects",
      },
      "tableValuedFunctions": [],
    },
  ],
  "parameterIndexes": [
    {
      "filters": [],
      "hash": 505749374,
      "lookupScope": {
        "lookupName": "lookup",
        "queryId": "0",
      },
      "output": [
        {
          "source": {
            "column": "org_id",
          },
          "type": "data",
        },
      ],
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "user_id",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "org_memberships",
      },
      "tableValuedFunctions": [],
    },
    {
      "filters": [],
      "hash": 371913368,
      "lookupScope": {
        "lookupName": "lookup",
        "queryId": "1",
      },
      "output": [
        {
          "source": {
            "column": "id",
          },
          "type": "data",
        },
      ],
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "id",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "organisations",
      },
      "tableValuedFunctions": [],
    },
  ],
  "streams": [
    {
      "queriers": [
        {
          "bucket": 0,
          "lookupStages": [
            [
              {
                "instantiation": [
                  {
                    "expr": {
                      "function": "->>",
                      "parameters": [
                        {
                          "source": {
                            "request": "auth",
                          },
                          "type": "data",
                        },
                        {
                          "type": "lit_string",
                          "value": "$.sub",
                        },
                      ],
                      "type": "function",
                    },
                    "type": "request",
                  },
                ],
                "lookup": 0,
                "type": "parameter",
              },
            ],
            [
              {
                "instantiation": [
                  {
                    "lookup": {
                      "idInStage": 0,
                      "stageId": 0,
                    },
                    "resultIndex": 0,
                    "type": "lookup",
                  },
                ],
                "lookup": 1,
                "type": "parameter",
              },
            ],
          ],
          "requestFilters": [],
          "sourceInstantiation": [
            {
              "lookup": {
                "idInStage": 0,
                "stageId": 1,
              },
              "resultIndex": 0,
              "type": "lookup",
            },
          ],
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": 1,
}
`;

exports[`common table expressions > can reference CTE multiple times 1`] = `
{
  "buckets": [
    {
      "hash": 436886157,
      "sources": [
        0,
      ],
      "uniqueName": "a|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 365381597,
      "outputTableName": "tbl_a",
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "col_1",
            },
            "type": "data",
          },
        },
        {
          "expr": {
            "source": {
              "column": "col_2",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "tbl_a",
      },
      "tableValuedFunctions": [],
    },
  ],
  "parameterIndexes": [
    {
      "filters": [],
      "hash": 40997809,
      "lookupScope": {
        "lookupName": "lookup",
        "queryId": "0",
      },
      "output": [
        {
          "source": {
            "column": "id",
          },
          "type": "data",
        },
      ],
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "id",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "user_profiles",
      },
      "tableValuedFunctions": [],
    },
    {
      "filters": [],
      "hash": 91539928,
      "lookupScope": {
        "lookupName": "lookup",
        "queryId": "1",
      },
      "output": [
        {
          "source": {
            "column": "id",
          },
          "type": "data",
        },
      ],
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "col_1",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "tbl_2",
      },
      "tableValuedFunctions": [],
    },
  ],
  "streams": [
    {
      "queriers": [
        {
          "bucket": 0,
          "lookupStages": [
            [
              {
                "instantiation": [
                  {
                    "expr": {
                      "function": "->>",
                      "parameters": [
                        {
                          "source": {
                            "request": "auth",
                          },
                          "type": "data",
                        },
                        {
                          "type": "lit_string",
                          "value": "$.sub",
                        },
                      ],
                      "type": "function",
                    },
                    "type": "request",
                  },
                ],
                "lookup": 0,
                "type": "parameter",
              },
            ],
            [
              {
                "instantiation": [
                  {
                    "expr": {
                      "function": "->>",
                      "parameters": [
                        {
                          "source": {
                            "request": "auth",
                          },
                          "type": "data",
                        },
                        {
                          "type": "lit_string",
                          "value": "$.sub",
                        },
                      ],
                      "type": "function",
                    },
                    "type": "request",
                  },
                ],
                "lookup": 0,
                "type": "parameter",
              },
              {
                "instantiation": [
                  {
                    "lookup": {
                      "idInStage": 0,
                      "stageId": 0,
                    },
                    "resultIndex": 0,
                    "type": "lookup",
                  },
                ],
                "lookup": 1,
                "type": "parameter",
              },
            ],
          ],
          "requestFilters": [],
          "sourceInstantiation": [
            {
              "lookup": {
                "idInStage": 0,
                "stageId": 1,
              },
              "resultIndex": 0,
              "type": "lookup",
            },
            {
              "lookup": {
                "idInStage": 1,
                "stageId": 1,
              },
              "resultIndex": 0,
              "type": "lookup",
            },
          ],
        },
      ],
      "stream": {
        "isSubscribedByDefault": false,
        "name": "a",
        "priority": 3,
      },
    },
  ],
  "version": 1,
}
`;

exports[`common table expressions > multiple output references 1`] = `
{
  "buckets": [
    {
      "hash": 326810458,
      "sources": [
        0,
      ],
      "uniqueName": "workspaces/role=user/type=individual|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 337175667,
      "outputTableName": "workspace",
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "id",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "workspace",
      },
      "tableValuedFunctions": [],
    },
  ],
  "parameterIndexes": [],
  "streams": [
    {
      "queriers": [
        {
          "bucket": 0,
          "lookupStages": [
            [
              {
                "filters": [
                  {
                    "left": {
                      "left": {
                        "function": "->>",
                        "parameters": [
                          {
                            "source": {
                              "column": "value",
                            },
                            "type": "data",
                          },
                          {
                            "type": "lit_string",
                            "value": "role",
                          },
                        ],
                        "type": "function",
                      },
                      "operator": "=",
                      "right": {
                        "type": "lit_string",
                        "value": "user",
                      },
                      "type": "binary",
                    },
                    "operator": "and",
                    "right": {
                      "left": {
                        "function": "->>",
                        "parameters": [
                          {
                            "source": {
                              "column": "value",
                            },
                            "type": "data",
                          },
                          {
                            "type": "lit_string",
                            "value": "type",
                          },
                        ],
                        "type": "function",
                      },
                      "operator": "=",
                      "right": {
                        "type": "lit_string",
                        "value": "individual",
                      },
                      "type": "binary",
                    },
                    "type": "binary",
                  },
                ],
                "functionInputs": [
                  {
                    "function": "->>",
                    "parameters": [
                      {
                        "source": {
                          "request": "auth",
                        },
                        "type": "data",
                      },
                      {
                        "type": "lit_string",
                        "value": "workspaces",
                      },
                    ],
                    "type": "function",
                  },
                ],
                "functionName": "json_each",
                "outputs": [
                  {
                    "function": "->>",
                    "parameters": [
                      {
                        "source": {
                          "column": "value",
                        },
                        "type": "data",
                      },
                      {
                        "type": "lit_string",
                        "value": "id",
                      },
                    ],
                    "type": "function",
                  },
                ],
                "type": "table_valued",
              },
            ],
          ],
          "requestFilters": [],
          "sourceInstantiation": [
            {
              "lookup": {
                "idInStage": 0,
                "stageId": 0,
              },
              "resultIndex": 0,
              "type": "lookup",
            },
          ],
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "workspaces/role=user/type=individual",
        "priority": 3,
      },
    },
  ],
  "version": 1,
}
`;
